// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Should render and match the snapshot 1`] = `
.c0 {
  outline: none;
  border: none;
  background: transparent;
  font-weight: bold;
  font-size: 13px;
  line-height: 17px;
  padding: 2px;
  cursor: pointer;
  font-weight: 700;
  color: #2F3850;
}

<div>
  <button
    class="c0"
    font-weight="bold"
  />
</div>
`;

exports[`<Button /> Should render disabled button and match the snapshot 1`] = `
.c0 {
  outline: none;
  border: none;
  background: transparent;
  font-weight: bold;
  font-size: 13px;
  line-height: 17px;
  padding: 2px;
  cursor: not-allowed;
  opacity: 0.7;
  font-weight: 700;
  color: #2F3850;
}

<div>
  <button
    class="c0"
    disabled=""
    font-weight="bold"
  />
</div>
`;

exports[`<Button /> Should render loading button and match the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 100%px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100px;
  height: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: auto;
  width: 30px;
  height: 30px;
}

.c1:after {
  content: ' ';
  display: block;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  border: 6px solid #C866EA;
  border-color: #C866EA transparent #C866EA transparent;
  -webkit-animation: hAjVGa 1.2s linear infinite;
  animation: hAjVGa 1.2s linear infinite;
}

<div>
  <div
    class="c0"
    height="100%"
    width="100"
  >
    <div
      class="c1"
      color="#C866EA"
      size="30"
      width="6"
    />
  </div>
</div>
`;
